# persuasion-bias

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/actions/uv_setup/: action.yaml
.github/workflows/: ci.yaml
conf/: config.yaml
conf/agent/: graph.yaml  react-api.yaml  react.yaml
conf/embedding/: openai.yaml  sentence_transformers.yaml
conf/hydra/: settings.yaml
conf/hydra/job_logging/: custom.yaml
conf/llm/: anthropic.yaml  hf_endpoint.yaml  hf_local.yaml  openai.yaml  vllm.yaml
conf/loader/: persuasion.yaml
conf/vectorstore/: chroma.yaml  memory.yaml
src/: baseline_analysis_agent.ipynb  baseline_chain_rag.ipynb  baseline_graph_rag.ipynb  baseline_rag_main.ipynb  chain_rag.ipynb  compression_retrieval__bias_analysis_agent.ipynb  contextual_compression_chain.ipynb  contextual_compression_graph.ipynb  retrieval_baseline.ipynb  retrievers.ipynb
src/persuasion_bias/: __init__.py  __main__.py
src/persuasion_bias/agents/: __init__.py  agent.py  edges.py  graph.py  nodes.py  react.py  tools.py
src/persuasion_bias/config/: log-config.yaml  logging.py  path.py
src/persuasion_bias/core/: document_loaders.py  retrievers.py  state.py
src/persuasion_bias/datasets/: persuasion.py
src/persuasion_bias/prompts/: templates.py
src/persuasion_bias/rag/: base.py  chain.py  chains.py  graphs.py
src/persuasion_bias/retrieval/: loader.py  utils.py  vectorstore.py
src/persuasion_bias/retrievers/: base.py
src/persuasion_bias/schemas/: models.py  state.py
src/persuasion_bias/utils/: __init__.py  classes.py  device.py  helpers.py  hydra.py  outputs.py  path.py  prompts.py  wrappers.py
tests/: conftest.py  test_device.py  test_edges.py  test_loader.py  test_model_schemas.py  test_nodes.py  test_react_chain.py  test_rule.md  test_tools.py
tests/agents_and_retrieval/: test_vectostore.py
tests/utils_and_schemas/: test_hydra.py  test_model_schemas.py  test_path.py  test_state_schema.py
