[project]
name = "persuasion-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thanakara", email = "thkaranikolopoulos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.6",
    "pandas>=2.3.2",
    "sentence-transformers>=5.1.0",
]

[project.scripts]
persuasion-bias = "persuasion_bias:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".vscode"]

[tool.ruff.lint]
select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "B9",   # flake8-bugbear
    "UP",   # pyupgrade
    "PL",   # pylint
    # "G",    # logging
]
ignore = [
    "W191",     # indentation-with-tabs, handled by ruff-format
    "E731",     # lambda-assignment
    "B905",     # zip-without-explicit-strict
    "PLR0913",  # too-many-arguments
    "PLC0414",  # useless-import-alias
]

[tool.ruff.lint.isort]
from-first = false
length-sort = true
lines-between-types = 1
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"