[project]
name = "persuasion-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thanakara", email = "thkaranikolopoulos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.0.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.3.5",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.0",
    "pandas>=2.3.2",
    "sentence-transformers>=5.1.0",
]

[project.scripts]
pbias = "persuasion_bias.__main__:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".vscode"]

[tool.ruff.lint]
select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "B9",   # flake8-bugbear
    "UP",   # pyupgrade
    "PL",   # pylint
    # "G",    # logging
]
ignore = [
    "W191",     # indentation-with-tabs, handled by ruff-format
    "E731",     # lambda-assignment
    "B905",     # zip-without-explicit-strict
    "PLR0913",  # too-many-arguments
    "PLC0414",  # useless-import-alias
]

[tool.ruff.lint.isort]
from-first = false
length-sort = true
lines-between-types = 1
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
